# cmake-boost-unittests-skeleton

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  geometry.cpp  geometry.hpp
src/parse/: CMakeLists.txt  regex.cpp  regex.hpp
test/: CMakeLists.txt
test/src/calc/: geometryTest.cpp
test/src/parse/: regexTest.cpp
